/*
 *
 *  Copyright (C) 2019 Signal Messenger, LLC.
 *  All rights reserved.
 *
 *  SPDX-License-Identifier: GPL-3.0-only
 *
 */

syntax = "proto2";

// Messages sent over the signaling channel

package signaling;

// A serialized one these goes in the "opaque" field of the CallingMessage::Offer in SignalService.proto
// For future compatibility, we can add new slots (v2, v3, v4 ....)
message Offer {
  optional ConnectionParametersV3OrV2 V3OrV2 = 2;
}

// A serialized one these goes in the "opaque" field of the CallingMessage::Offer in SignalService.proto
message Answer {
  optional ConnectionParametersV3OrV2 V3OrV2 = 2;
}

// A serialized one these goes in the "opaque" field of the CallingMessage::Ice in SignalService.proto
message IceCandidate {
  optional IceCandidateV3OrV2 V3OrV2 = 2;
}

// The V2 protocol uses SDP, DTLS, but not SCTP.
// The V3 protocol uses SDP, but not DTLS, but not SCTP.
message ConnectionParametersV3OrV2 {
  optional string sdp = 1;
  // V2 has this unset.
  // V3 has this set
  optional bytes public_key = 2;
}

message IceCandidateV3OrV2 {
  optional string sdp = 1;
}